gitops-apps/authentik/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
  template:
    metadata:
      labels:
        app: authentik
    spec:
      containers:
        - name: server
          image: ghcr.io/goauthentik/server:2024.10
          ports:
            - containerPort: 9000
