gitops-apps/authentik/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
spec:
  ports:
    - port: 9000
  selector:
    app: authentik
